[package]
name = "webrtc-udp"
version = "0.0.0"
authors = ["Rain Liu <yliu@webrtc.rs>"]
edition = "2018"
description = "A pure Rust implementation of connection-oriented UDP Listener"
license = "MIT"
documentation = "https://docs.rs/webrtc-udp"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/udp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"